# ChangeLog for dev-libs/cgilib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.26 2011/02/06 12:35:15 leio Exp $

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> cgilib-0.5.ebuild:
  Drop to ~mips

*cgilib-0.6 (06 Jun 2008)

  06 Jun 2008; Peter Volkov <pva@gentoo.org> +cgilib-0.6.ebuild:
  Version bump, bug #225055, reported by Alex J. Ivasyuv.

  08 Jan 2008; Markus Ullmann <jokey@gentoo.org> cgilib-0.5.ebuild:
  Quoting

  27 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> cgilib-0.5.ebuild:
  Stable on MIPS.

  07 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> -cgilib-0.5-r1.ebuild:
  Removing 0.5-r1: test is broken. Nothing depends on it.

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> cgilib-0.5-r1.ebuild:
  Mark 0.5-r1 stable on alpha

  04 Feb 2006; Markus Rothe <corsair@gentoo.org> cgilib-0.5.ebuild:
  Bump to stable wrt bug #121470

  03 Feb 2006; Aron Griffis <agriffis@gentoo.org> cgilib-0.5-r1.ebuild:
  Mark 0.5-r1 stable on ia64

  04 Dec 2005; Tom Gall <tgall@gentoo.org> cgilib-0.5-r1.ebuild:
  stable on ppc64

  10 Nov 2005; Brent Baude <ranger@gentoo.org> cgilib-0.5-r1.ebuild:
  Marked cgilib-0.5-r1 ~ppc64 per bug 111849

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> cgilib-0.5.ebuild:
  stable on amd64

  23 Aug 2005; Aaron Walker <ka0ttic@gentoo.org> cgilib-0.5.ebuild,
  cgilib-0.5-r1.ebuild:
  Added ~mips.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> cgilib-0.5.ebuild:
  stable on ia64

  26 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> cgilib-0.5-r1.ebuild:
  Test is possibly broken on other arches, so I am making it x86-only for now.

*cgilib-0.5-r1 (26 Jun 2005)

  26 Jun 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/cgilib-0.5-cgitest.diff, +cgilib-0.5-r1.ebuild:
  Add patch from CVS, compile and install cgilib.test to make testing easier.

  12 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> cgilib-0.5.ebuild:
  Stable on alpha.
