@@ -1,0 +1,30 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/cgilib-0.7.ebuild,v 1.1 2011/07/06 14:48:45 jer Exp $
+
+EAPI="4"
+
+inherit autotools autotools-utils
+
+DESCRIPTION="A programmers library for the CGI interface"
+HOMEPAGE="http://www.infodrom.org/projects/cgilib/"
+SRC_URI="http://www.infodrom.org/projects/${PN}/download/${P}.tar.gz"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE="static-libs"
+
+src_prepare() {
+	eautoreconf
+}
+
+src_configure() {
+	econf $(use_enable static-libs static)
+}
+
+src_install() {
+	default
+	dodoc AUTHORS ChangeLog README cookies.txt
+	use static-libs || remove_libtool_files
+}
