@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/cgilib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.26 2011/02/06 12:35:15 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.27 2011/07/06 14:48:45 jer Exp $
+
+*cgilib-0.7 (06 Jul 2011)
+
+  06 Jul 2011; Jeroen Roovers <jer@gentoo.org> +cgilib-0.7.ebuild:
+  Version bump.
 
   06 Feb 2011; Mart Raudsepp <leio@gentoo.org> cgilib-0.5.ebuild:
   Drop to ~mips
